--- a/login.html
+++ b/login.html
@@ -19,14 +19,19 @@
             border-radius: 15px;
             color: #ffffff;
         }
+        .logo{
+            width: 150px;
+            padding-left: 40px;
+        }
         input{
             padding: 15px;
             border: none;
             outline: none;
+            border-radius: 10px;
             font-size: 15px;
         }
         button{
-            background-color: dodgerblue;
+            background-color: #ee0a46;
             border: none;
             padding: 15px;
             width: 100%;
@@ -35,13 +40,14 @@
             font-size: 15px;
         }
         button:hover{
-            background-color: deepskyblue;
+            background-color: #e61f1f91;
             cursor: pointer;
         }
     </style>
 </head>
 <body>
     <div>
+        <img src="bayern.png" class="logo">
         <h1>Login</h1>
         <input type="text" placeholder="Nome">
         <br><br>
